--- a/turan.tex
+++ b/turan.tex
@@ -407,13 +407,12 @@ line).
 \end{proof}
 
 \begin{thm}
-    $\ex(\vertexb,\disjointb) \in O(n\log n)$.
+  $\ex(\vertexb,\disjointb) \in O(n\log n)$.
 \end{thm}
 
 \begin{proof}[Proof sketch]
   Follows from \lemref{constant-degree} and the fact that the $\edgea$
-  configuration prevents seecting the same point twice.
-
+  configuration prevents killinng selecting the same point twice.
 \end{proof}
 
 \begin{thm}
